Releasing Element Face SDK 1.7.0

--- a/app-face/src/main/res/layout/fragment_enroll_form.xml
+++ b/app-face/src/main/res/layout/fragment_enroll_form.xml
@@ -27,7 +27,7 @@
 
         <EditText
             style="@style/DataFormEditTextCap"
-            android:id="@+id/firstName"
+            android:id="@+id/name"
             android:hint="@string/name" />
 
         <EditText
