Releasing Element Face SDK 1.7.2

--- a/app-ekyc/src/main/res/layout/content_main.xml
+++ b/app-ekyc/src/main/res/layout/content_main.xml
@@ -68,7 +68,7 @@
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
             <TextView
-                android:id="@+id/cardMatchingStatus"
+                android:id="@+id/cardMatchStatus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
